[package]
name = "netruko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
russh = { version = "0.42.0", features = ["openssl"] }
russh-keys = { version = "0.42.0", features = ["openssl"] }

[dev-dependencies]
clap = { version = "4.5.1", features = ["cargo"] }
rpassword = "7.3.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
